added settings, fixed the connection to the web service, completed several activity files, corrected the design

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,13 @@ plugins {
     id 'com.android.application'
 }
 
+
 android {
-    namespace 'com.example.androidqrcodejava'
+    namespace 'com.example.androidjavadatamatrixscan1csoapclient'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.androidqrcodejava"
+        applicationId "com.example.androidjavadatamatrixscan1csoapclient"
         minSdk 30
         targetSdk 33
         versionCode 1
@@ -23,26 +24,38 @@ android {
         }
     }
 
-    buildFeatures{
+    lintOptions {
+        abortOnError false
+    }
+
+    buildFeatures {
         viewBinding = true
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildToolsVersion '30.0.3'
+
 }
 
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation files('.\\libs\\ksoap2-android-assembly-3.6.4-jar-with-dependencies.jar')
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.preference:preference:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation 'com.google.zxing:core:3.4.1'
-
 
 }
