--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,19 +5,24 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/Theme.AndroidQRCodeJava"
+            android:usesCleartextTraffic="true"
             tools:targetApi="31">
         <activity
-                android:name=".MainActivity"
+                android:name="com.example.androidjavadatamatrixscan1csoapclient.MainActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -25,6 +30,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+                android:name="com.example.androidjavadatamatrixscan1csoapclient.ProcessActivity"
+                android:parentActivityName="com.example.androidjavadatamatrixscan1csoapclient.MainActivity"/>
+        <activity
+                android:name="com.example.androidjavadatamatrixscan1csoapclient.SettingsActivity"
+                android:theme="@style/SettingsTheme"
+                android:parentActivityName="com.example.androidjavadatamatrixscan1csoapclient.MainActivity"/>
         
         <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
                   android:screenOrientation="fullSensor"
