--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "AndroidQRCodeJava"
+rootProject.name = "AndroidJavaDatamatrixScan1CSOAPClient"
 include ':app'
